fix alignment

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -39,8 +39,8 @@
 }
 
 .user-description { 
-  width: 80%;
-  text-align: center;
+  width: 50%;
+  text-align: left;
   margin: 0 auto;	
 }
 
